# VM

./: CMakeLists.txt  README.md  install_third_party.sh
isa/: CMakeLists.txt  README.md  builder.h.j2  dec_to_bin.py  dec_to_bin.python  defines.h.j2  init_func_vec.inc  init_func_vec.inc.j2  instruction.h  isa.cpp  isa.cpp.j2  isa.h  isa.h.j2  isa_cpp_generator.py  isa_decl.inc  isa_decl.inc.j2  isa_impl.inc  isa_impl.inc.j2  isa_opcode_defines.h.j2  isa_run.cpp  isa_run.cpp.j2
isa/json/: isa.json  isa_bin.json  isa_origin.json
runtime_core/: CMakeLists.txt  README.md  frame.h  function.h  interpretator.cpp  interpretator.h
tests/: CMakeLists.txt  README.md  fibonacci_call.cpp  fibonacci_cycle.cpp  test1.cpp  test2.cpp  test3.cpp
tests/fibonacci_cycle/: README.md
tests/fibonacci_recursive/: README.md
